--- a/source/use_cases/aws-serverless-web-app/package.json
+++ b/source/use_cases/aws-serverless-web-app/package.json
@@ -28,24 +28,25 @@
     "build+lint+test": "npm run build && npm run lint && npm test && npm run integ-assert"
   },
   "dependencies": {
-    "@aws-solutions-constructs/aws-cloudfront-s3": "~1.65.0",
-    "@aws-solutions-constructs/aws-cognito-apigateway-lambda": "~1.65.0",
-    "@aws-solutions-constructs/aws-lambda-dynamodb": "~1.65.0",
-    "@aws-cdk/core": "~1.65.0",
-    "@aws-cdk/aws-lambda": "~1.65.0",
-    "@aws-cdk/aws-cloudfront": "~1.65.0",
-    "@aws-cdk/aws-s3": "~1.65.0",
-    "@aws-cdk/custom-resources": "~1.65.0",
-    "@aws-cdk/aws-cloudformation": "~1.65.0",
-    "@aws-cdk/aws-iam": "~1.65.0",
-    "@aws-cdk/aws-cognito": "~1.65.0",
-    "@aws-cdk/aws-apigateway": "~1.65.0",
-    "@aws-cdk/aws-dynamodb": "~1.65.0",
-    "@aws-solutions-constructs/core": "~1.65.0",
+    "@aws-cdk/aws-apigateway": "1.61.1",
+    "@aws-cdk/aws-cloudformation": "1.61.1",
+    "@aws-cdk/aws-cloudfront": "1.61.1",
+    "@aws-cdk/aws-cognito": "1.61.1",
+    "@aws-cdk/aws-dynamodb": "1.61.1",
+    "@aws-cdk/aws-iam": "1.61.1",
+    "@aws-cdk/aws-lambda": "1.61.1",
+    "@aws-cdk/aws-s3": "1.61.1",
+    "@aws-cdk/core": "1.61.1",
+    "@aws-cdk/custom-resources": "1.61.1",
+    "@aws-solutions-constructs/aws-cloudfront-s3": "1.61.1",
+    "@aws-solutions-constructs/aws-cognito-apigateway-lambda": "1.61.1",
+    "@aws-solutions-constructs/aws-lambda-dynamodb": "1.61.1",
+    "@aws-solutions-constructs/core": "1.61.1",
+    "mira": "git+https://github.com/nearform/mira.git#feature-dist",
     "source-map-support": "^0.5.16"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "~1.65.0",
+    "@aws-cdk/assert": "1.61.1",
     "@types/jest": "^24.0.23",
     "@types/node": "^10.3.0"
   },
